--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,23 @@
 h1 {
     text-align: center;
 }
+
+.container{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    
+}
+.card{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 20px;
+}
+    
+
+.img{
+    width: 120px;
+    height: 120px;
+}
+
