--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -12,12 +12,26 @@ h1 {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 20px;
+    margin: 10px;
+    
 }
     
 
 .img{
     width: 120px;
     height: 120px;
+}
+
+.legend{
+    text-align: center;
+    display: block;
+    width: 100%;
+}
+.div_form{
+    display: flex;
+    justify-content: center;
+    gap:10px;
+    padding: 20px;
+   
 }
 
