--- a/src/views/index.handlebars
+++ b/src/views/index.handlebars
@@ -11,6 +11,7 @@
     <img class="img" src={{thumbnail}} />
     <p>{{title}}</p>
     <p>${{price}}</p>
+    <p>stock:{{stock}}</p>
     
 
 </div>
@@ -24,15 +25,7 @@
 {{/if}}
 
 
-{{!-- "id": 12,
-"title": "whisky",
-"description": "black label",
-"price": 25000,
-"thumbnail": "Sin imagen",
-"status": true,
-"code": "aaq",
-"stock": 10,
-"category":"alcohol"  --}}
+
 
 <script src="https://cdn.socket.io/4.7.3/socket.io.min.js"
     integrity="sha384-+miq58Ltmjm+SSP5g8Ok6dpMO/6R4n8xe/x1Yj0Bdb9kiEz25LTnWv/GZQTRQamg"
