--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,5 +1,5 @@
 <header>
-        <a href="/">Productos</a>
+        <a href="/products">Productos</a>
         <a href="/realtimeproducts">Actualización de productos</a>
         <a href="/chat">Nuestro chat</a>
 </header>
