se agregaron controladores de usuario y vistas

--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -5,9 +5,11 @@
 <p><b>Apellido:</b> {{user.last_name}}</p>
 <p><b>Edad:</b> {{user.age}}</p>
 <p><b>Email:</b> {{user.email}}</p>
+{{#if isAdmin}}
+    <p><b>Rol:</b> Admin</p>
+{{/if}}
 
-
-<a href="/api/sessions/logout">Cerrar Sesión</a>
+<a href="/api/users/logout">Cerrar Sesión</a>
 
 
 
