--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,6 +1,6 @@
 
 
-<form action="/api/users" method="POST" enctype="application/x-www-form-urlencoded">
+<form action="/api/users/register" method="POST" enctype="application/x-www-form-urlencoded">
     <legend>Formulario de registro</legend>
     <input type="text" placeholder="nombre" name="first_name">
     <input type="text" placeholder="apellido" name="last_name">
