--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,4 +1,4 @@
-<form action="/api/sessions/sessionlogin" method="POST" enctype="application/x-www-form-urlencoded">
+<form action="/api/users/login" method="POST" enctype="application/x-www-form-urlencoded">
     <legend>Inicia sesión para continuar</legend>
 
     <input type="mail" placeholder="email" name="email">
