--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -2,15 +2,21 @@
 
         <nav class="bg-blue-900 flex p-12">
                 <ul class="flex w-2/3 gap-10">
+
+                        {{#if isAdmin}}
                         <li> <a class="text-3xl font-bold text-white" href="/products">Productos</a></li>
                         <li><a class="text-3xl font-bold text-white" href="/realtimeproducts">Actualización de
                                         productos</a></li>
+                        {{else}}
+                        <li> <a class="text-3xl font-bold text-white" href="/products">Productos</a></li>
                         <li> <a class="text-3xl font-bold text-white" href="/chat">Chat</a></li>
+                        {{/if}}
                 </ul>
                 <ul class="flex w-1/3 gap-10">
                         {{#if user}}
-                        <li> <a class="text-3xl font-bold text-white" href="/profile">Hola {{user.first_name}}</a></li>
-                        <li> <a class="text-3xl font-bold text-white" href="/api/sessions/logout">Cerrar sesión</a></li>
+                        <li> <a class="text-3xl font-bold text-white" href="/api/users/profile">Hola
+                                        {{user.first_name}}</a></li>
+                        <li> <a class="text-3xl font-bold text-white" href="/api/users/logout">Cerrar sesión</a></li>
                         {{else}}
                         <li><a class="text-3xl font-bold text-white" href="/login">Iniciar sesión</a></li>
                         <li> <a class="text-3xl font-bold text-white" href="/register">Ingresar</a></li>
