se agrego generador de ticket

--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -7,7 +7,7 @@
     <input type="submit" value="Ingresar">
     <p>{{error}}</p>
 </form>
-<a href="/api/sessions/github">
+<a href="/api/users/github">
     <div class="w-40 flex-col   border-solid my-10 border-2 border-black rounded-lg ">
         <ion-icon class="text-4xl w-full" name="logo-github"></ion-icon>
         <p class="font-bold ">Ingresar con github</p>
