--- a/src/views/carts.handlebars
+++ b/src/views/carts.handlebars
@@ -13,18 +13,25 @@
         <p>Total por cantidad: ${{product.totalPrice}}</p>
     </li>
 
-    <button onclick="deleteProduct(`{{id}}`,`{{product._id}}`)">Eliminar producto</button>
+    <button class="border-2 rounded-xl border-red-700 bg-red-700 text-white p-1 " onclick="deleteProduct(`{{id}}`,`{{product._id}}`)">Eliminar producto</button>
 
     {{/each}}
 
     <h2>Total del carrito: {{totalCart}}</h2>
 
-    <button onclick="emptyCart(`{{id}}`)">Vaciar el carrito</button>
+    <button class="border-2 rounded-xl border-red-700 bg-red-700 text-white p-1 " onclick="emptyCart(`{{id}}`)">Vaciar el carrito</button>
+
+    
+<form action="/api/carts/{{id}}/purchase" method="POST">
+<button class="border-2 rounded-xl border-blue-700 bg-blue-700 text-white p-1 m-1">Generar ticket de compra</button>
+</form>
+
 
     {{else}}
     <p>No hay productos en el carrito</p>
     {{/if}}
 </ul>
+
 
 <script>
    async function deleteProduct(cartId, productId) {
