--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -11,6 +11,7 @@
         <input type="text" id="description" placeholder="Descripción">
         <input type="number" id="price" placeholder="Precio">
         <input type="text" id="img" value="Sin Imagen">
+        <input type="file" id="thumbnail" value="Sin Imagen">
         <input type="text" id="code" placeholder="Código">
         <input type="number" id="stock" placeholder="Stock">
         <input type="text" id="category" placeholder="Categoria">
