--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -2,36 +2,51 @@ h1 {
     text-align: center;
 }
 
-.container{
+.container {
     display: flex;
-    justify-content: center;
+    justify-content: start;
+    align-items: center;
     flex-wrap: wrap;
-    
+
 }
-.card{
+
+.card {
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: 10px;
-    
+
 }
-    
-.img{
+
+.img {
     width: 120px;
     height: 120px;
 }
 
-.legend{
+.legend {
     text-align: center;
     display: block;
     width: 100%;
 }
-.div_form{
+
+.div_form {
     display: flex;
     justify-content: center;
-    gap:10px;
+    gap: 10px;
     padding: 20px;
-   
+
 }
 
-
+.form {
+   
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 10px;
+    gap: 5px;
+}
+.form-input{
+    text-align: center;
+    
+    border-radius: 15px;
+}
