--- a/src/views/profile.handlebars
+++ b/src/views/profile.handlebars
@@ -8,7 +8,7 @@
     <p><b>Rol:</b> Admin</p>
 {{/if}}
 
-<a href="/api/users/logout">Cerrar Sesión</a>
+<a class="border-2 rounded-xl border-red-700 bg-red-700 text-white p-1 mt-5 " href="/api/users/logout">Cerrar Sesión</a>
 
 
 
