--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -2,25 +2,27 @@
 
 <div id="productsRealTime" class="container"></div>
 
-<form>
+<form ></form>
 
-        <legend class="legend">Formulario</legend>
+    <legend class="legend">Formulario</legend>
 
-        <div class="div_form">
-        <input type="text" id="title" placeholder="Titulo">
-        <input type="text" id="description" placeholder="Descripción">
-        <input type="number" id="price" placeholder="Precio">
-        <input type="text" id="img" value="Sin Imagen">
-        <input type="file" id="thumbnail" value="Sin Imagen">
-        <input type="text" id="code" placeholder="Código">
-        <input type="number" id="stock" placeholder="Stock">
-        <input type="text" id="category" placeholder="Categoria">
-        <select id="status">
+    <div class="form">
+
+        <input class="form-input" type="text" id="title" placeholder="Titulo">
+        <input class="form-input"type="text" id="description" placeholder="Descripción">
+        <input class="form-input"type="number" id="price" placeholder="Precio">
+        <input class="form-input"type="text" id="img" value="Sin Imagen">
+        <input class="form-input"type="file" id="thumbnail" value="Sin Imagen">
+        <input class="form-input"type="text" id="code" placeholder="Código">
+        <input class="form-input" type="number" id="stock" placeholder="Stock">
+        <input class="form-input" type="text" id="category" placeholder="Categoria">
+        <select class="form-input" id="status">
             <option value="true">Activo</option>
             <option value="false">Inactivo</option>
         </select>
-        <button type="button" id="btnSend">Enviar</button>
-</div>
+        <button class="form-input border-2 rounded-xl border-blue-700 bg-blue-700 text-white p-1 m-1" type="button" id="btnSend">Enviar</button>
+    </div>
+    
 </form>
 
 
