--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,6 +1,6 @@
 <header>
 
-        <nav class="bg-blue-900 flex p-12">
+        <nav class="mx-auto bg-blue-700 flex p-12">
                 <ul class="flex w-2/3 gap-10">
 
                         {{#if isAdmin}}
