--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -1,26 +1,37 @@
-<form action="/api/users/login" method="POST" enctype="application/x-www-form-urlencoded">
-    <legend>Inicia sesión para continuar</legend>
+<div class="mt-8 mx-auto max-w-md">
+    <div class="bg-white py-8 px-4 shadow">
 
-    <input type="mail" placeholder="email" name="email" required>
-    <input type="password" placeholder="password" name="password" required>
+        <form class="space-y-5" action="/api/users/login" method="POST" enctype="application/x-www-form-urlencoded">
+            <legend class="text-center text-2xl font-extrabold"> Iniciar sesión</legend>
+            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold">Ingresar Email</label>
+                        <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400" type="mail" placeholder="email" name="email" required>
+           
+            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold">Ingresar Password</label>
 
-    <input type="submit" value="Ingresar">
-    <p>{{error}}</p>
-</form>
+            <input  class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400"type="password" placeholder="password" name="password" required>
+
+            <input class="w-full bg-blue-600 rounded-lg hover:bg-blue-700 text-white font-bold py-3 cursor-pointer"  type="submit" value="Ingresar">
+            <p>{{error}}</p>
+        </form>
+    </div>
+
+</div>
+
+
 <a href="/api/users/github">
     <div class="w-40 flex-col   border-solid my-10 border-2 border-black rounded-lg ">
         <ion-icon class="text-4xl w-full" name="logo-github"></ion-icon>
         <p class="font-bold ">Ingresar con github</p>
     </div>
-    
+
 </a>
 <a href="/api/sessions/facebook">
-   <div class="w-40 flex-col   border-solid my-10 border-2 border-black rounded-lg ">
+    <div class="w-40 flex-col   border-solid my-10 border-2 border-black rounded-lg ">
         <ion-icon class="text-4xl w-full" name="logo-facebook"></ion-icon>
         <p class="font-bold ">Ingresar con facebook</p>
     </div>
-    
+
 </a>
- 
+
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
