--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -1,12 +1,21 @@
+<div class="mt-8 mx-auto max-w-md">
+
+    <div class="bg-white py-8 px-4 shadow">
+        <form class="space-y-5" action="/api/users/register" method="POST" enctype="application/x-www-form-urlencoded">
+            <legend class="text-center text-2xl font-extrabold">Formulario de registro</legend>
+            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold" >Ingresar Nombre</label>
+            <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400" placeholder="nombre" name="first_name">
+            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold" for="">Ingresar Apellido</label>
+            <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400"  type="text" placeholder="apellido" name="last_name">
+            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold" for="">Ingresar Email</label>
+            <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400"  type="mail" placeholder="email" name="email">
+            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold" for="">Password</label>
+            <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400"   type="password" placeholder="password" name="password">
+            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold" for="">Ingresar Edad</label>
+            <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400"  type="number" placeholder="age" name="age">
+            <input class="w-full rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 cursor-pointer"  type="submit" value="Registrarse">
+        </form>
+    </div>
 
 
-<form action="/api/users/register" method="POST" enctype="application/x-www-form-urlencoded">
-    <legend>Formulario de registro</legend>
-    <input type="text" placeholder="nombre" name="first_name">
-    <input type="text" placeholder="apellido" name="last_name">
-    <input type="mail" placeholder="email" name="email">
-    <input type="password" placeholder="password" name="password">
-    <input type="number" placeholder="age" name="age">
-    <input type="submit" value="Registrarse">
-</form>
-
+</div>
