--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -16,6 +16,7 @@
         <input class="form-input"type="text" id="code" placeholder="Código">
         <input class="form-input" type="number" id="stock" placeholder="Stock">
         <input class="form-input" type="text" id="category" placeholder="Categoria">
+        <input class="hidden" type="email" id="owner" value="{{user.email}}">
         <select class="form-input" id="status">
             <option value="true">Activo</option>
             <option value="false">Inactivo</option>
