--- a/src/views/login.handlebars
+++ b/src/views/login.handlebars
@@ -3,35 +3,46 @@
 
         <form class="space-y-5" action="/api/users/login" method="POST" enctype="application/x-www-form-urlencoded">
             <legend class="text-center text-2xl font-extrabold"> Iniciar sesión</legend>
-            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold">Ingresar Email</label>
-                        <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400" type="mail" placeholder="email" name="email" required>
-           
+
+
+            <a  class=" flex w-full  border bg-blue-500 rounded-lg p-1 " href="/api/sessions/github">
+                 <p class="font-bold text-white w-2/3 text-center">Ingresar con github</p>
+                    <ion-icon class="text-3xl text-white w-1/3" name="logo-github"></ion-icon>
+                  
+               
+
+            </a>
+            <a class=" flex w-full border bg-blue-500 rounded-lg  p-1" href="/api/sessions/facebook">
+
+                <p class="font-bold text-white w-2/3 text-center">Ingresar con facebook</p>
+                <ion-icon class="text-3xl text-white w-1/3" name="logo-facebook"></ion-icon>
+            </a>
+
+
+            <label class="block text-sm uppercase text-gray-500 mb-2 font-bold">Ingrese su email</label>
+            <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400" type="mail"
+                placeholder="email" name="email" required value="{{#if email}}{{email}}{{else}}""{{/if}}">
+
             <label class="block text-sm uppercase text-gray-500 mb-2 font-bold">Ingresar Password</label>
 
-            <input  class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400"type="password" placeholder="password" name="password" required>
+            <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400"
+                type="password" placeholder="password" name="password" required>
 
-            <input class="w-full bg-blue-600 rounded-lg hover:bg-blue-700 text-white font-bold py-3 cursor-pointer"  type="submit" value="Ingresar">
-            <p>{{error}}</p>
+            <input class="w-full bg-blue-600 rounded-lg hover:bg-blue-700 text-white font-bold py-3 cursor-pointer"
+                type="submit" value="Ingresar">
+            {{#if error}}
+            <p class="border uppercase bg-red-500 rounded-md text-center text-white p-1 font-bold">{{error}}</p>
+            {{/if}}
         </form>
+        <div class="flex justify-between my-5">
+            <a class="text-gray-500 font-bold text-xs" href="/register">No estas registrado? Registrate aquí</a>
+            <a class="text-gray-500 font-bold text-xs" href="/passrecover">Olvidé mi contraseña</a>
+        </div>
     </div>
 
 </div>
 
 
-<a href="/api/users/github">
-    <div class="w-40 flex-col   border-solid my-10 border-2 border-black rounded-lg ">
-        <ion-icon class="text-4xl w-full" name="logo-github"></ion-icon>
-        <p class="font-bold ">Ingresar con github</p>
-    </div>
-
-</a>
-<a href="/api/sessions/facebook">
-    <div class="w-40 flex-col   border-solid my-10 border-2 border-black rounded-lg ">
-        <ion-icon class="text-4xl w-full" name="logo-facebook"></ion-icon>
-        <p class="font-bold ">Ingresar con facebook</p>
-    </div>
-
-</a>
 
 <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
