--- a/src/views/partials/header.handlebars
+++ b/src/views/partials/header.handlebars
@@ -1,27 +1,39 @@
 <header>
 
-        <nav class="mx-auto bg-blue-700 flex p-12">
-                <ul class="flex w-2/3 gap-10">
+        <nav class="mx-auto bg-blue-700 justify-between items-center sm:flex  p-10">
+                <ul class="sm:flex gap-10 ">
 
                         {{#if isAdmin}}
-                        <li> <a class="text-3xl font-bold text-white" href="/products">Productos</a></li>
+                        <li class="sm:text-center"> <a class="text-3xl font-bold text-white "
+                                        href="/products">Productos</a></li>
                         <li><a class="text-3xl font-bold text-white" href="/realtimeproducts">Actualización de
                                         productos</a></li>
-                        {{else}}
+
+                        {{/if}}
+                        {{#if isPremium}}
+                        <li> <a class="text-3xl font-bold text-white" href="/products">Productos</a></li>
+                        <li> <a class="text-3xl font-bold text-white" href="/chat">Chat</a></li>
+                        <li><a class="text-3xl font-bold text-white" href="/realtimeproducts">Actualización de
+                                        productos</a></li>
+                        {{/if}}
+                        {{#if isUser}}
                         <li> <a class="text-3xl font-bold text-white" href="/products">Productos</a></li>
                         <li> <a class="text-3xl font-bold text-white" href="/chat">Chat</a></li>
                         {{/if}}
+
                 </ul>
-                <ul class="flex w-1/3 gap-10">
+                <ul class=" gap-10 md:flex ">
                         {{#if user}}
                         <li> <a class="text-3xl font-bold text-white" href="/api/users/profile">Hola
                                         {{user.first_name}}</a></li>
                         <li> <a class="text-3xl font-bold text-white" href="/api/users/logout">Cerrar sesión</a></li>
-                        <li><a class="text-4xl font-bold text-white" href="/carts/{{user.cart}}"> <ion-icon  name="cart-outline"></ion-icon></a></li>
+                        <li><a class="text-4xl font-bold text-white" href="/carts/{{user.cart}}"> <ion-icon
+                                                name="cart-outline"></ion-icon></a></li>
                         {{else}}
                         <li><a class="text-3xl font-bold text-white" href="/login">Iniciar sesión</a></li>
                         <li> <a class="text-3xl font-bold text-white" href="/register">Ingresar</a></li>
-                        <li><a class="text-4xl font-bold text-white" href="/carts/{{user.cart}}"> <ion-icon  name="cart-outline"></ion-icon></a></li>
+                        <li><a class="text-4xl font-bold text-white" href="/carts/{{user.cart}}"> <ion-icon
+                                                name="cart-outline"></ion-icon></a></li>
 
                         {{/if}}
                 </ul>
