--- a/src/views/register.handlebars
+++ b/src/views/register.handlebars
@@ -15,6 +15,10 @@
             <input class="w-full px-3 py-2 border border-gray-300 border rounded-md placeholder-gray-400"  type="number" placeholder="age" name="age">
             <input class="w-full rounded-lg bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 cursor-pointer"  type="submit" value="Registrarse">
         </form>
+        <div class="flex justify-between my-5">
+        <a class="text-gray-500 font-bold text-xs" href="/login">Ya estas registrado? Inicia sesión aquí</a>
+        <a class="text-gray-500 font-bold text-xs" href="/passrecover">Olvidé mi contraseña</a>
+        </div>
     </div>
 
 
