--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,5 +1,6 @@
 <h1>{{title}}</h1>
-
+<h2 id="rol"class="hidden">{{user.rol}}</h2>
+<h2 id="email"class="hidden">{{user.email}}</h2>
 <div id="productsRealTime" class="container"></div>
 
 <form ></form>
@@ -30,7 +31,7 @@
 
 
 
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="https://cdn.socket.io/4.7.3/socket.io.min.js"
     integrity="sha384-+miq58Ltmjm+SSP5g8Ok6dpMO/6R4n8xe/x1Yj0Bdb9kiEz25LTnWv/GZQTRQamg"
     crossorigin="anonymous"></script>
