--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,83 +1,61 @@
-<h1 class="font-extrabold text-4xl my-5">{{title}}</h1>
+ <h1 class="font-extrabold text-4xl my-5">{{title}}</h1>
 
-{{#if products.length }}
+  {{#if products.length}}
 
-<section class="mt-8 mx-10">
-    <div class="bg-white py-8 px-4 shadow flex flex-wrap  ">
-    {{#each products}}
-    {{#if this.stock }}
-    
-   
-    <div class="card">
+  <section class="mt-8 mx-10">
+    <div class="bg-white py-8 px-4 shadow flex flex-wrap">
+      {{#each products}}
+      {{#if this.stock}}
 
 
-        <img class="img" src={{this.thumbnail}} />
-        <p class="font-bold text-xl ">{{this.title}}</p>
-        <p class="font-bold text-xl ">${{this.price}}</p>
-        <p class="font-bold text-xl ">stock:{{this.stock}}</p>
+      <div class="card">
+        <img class="img" src="{{this.thumbnail}}" />
+        <p class="font-bold text-xl">{{this.title}}</p>
+        <p class="font-bold text-xl">${{this.price}}</p>
+        <p class="font-bold text-xl">stock: {{this.stock}}</p>
 
-        {{!-- <form method="POST" action="api/carts/{{../cart}}/product/{{this.id}}">
-        </form> --}}
-            <button onclick="addProduct('{{...cart}}', '{{this.id}}')" class="block text-center  rounded-xl border bg-green-700 text-white p-1 hover:bg-green-600">Agregar al carrito</button>
-        
+        <button onclick="addProduct('{{...cart}}', '{{this.id}}')"
+          class="block text-center rounded-xl border bg-green-700 text-white p-1 hover:bg-green-600">
+          Agregar al carrito
+        </button>
+      </div>
 
+      {{/if}}
+      {{/each}}
     </div>
+  </section>
+
+  <div class="text-center my-5">
+    {{#if hasPrevPage}}
+    <a class="text-center rounded-xl border bg-blue-700 text-white p-1 hover:bg-blue-600"
+      href="/products?page={{prevPage}}">Anterior</a>
+    {{/if}}
+    {{#if hasNextPage}}
+    <a class="text-center rounded-xl border bg-blue-700 text-white p-1 hover:bg-blue-600"
+      href="/products?page={{nextPage}}">Siguiente</a>
+    {{/if}}
+
+    <p>Página {{currentPage}} de {{totalPages}}</p>
+
+    {{else}}
+    <p>No hay productos disponibles.</p>
 
     {{/if}}
-    {{/each}}
-    </div>
-</section>
 
-<div class="text-center my-5">
-{{#if hasPrevPage}}
-<a class=" text-center  rounded-xl border bg-blue-700 text-white p-1 hover:bg-blue-600" href="/products?page={{prevPage}}"> Anterior</a>
-{{/if}}
-{{#if hasNextPage}}
-<a class=" text-center  rounded-xl border bg-blue-700 text-white p-1 hover:bg-blue-600" href="/products?page={{nextPage}}"> Siguiente</a>
-{{/if}}
+  </div>
 
-<p>Pagina {{currentPage}} de {{totalPages}}</p>
+  <script>
+    async function addProduct(cart, id) {
 
-{{else}}
-<p>No hay productos disponibles.</p>
+      try {
+        const response = await fetch(`/api/carts/${cart}/product/${id}`, {
+          method: "POST"
+        })
 
-{{/if}}
+      } catch (error) {
+        console.error(error)
+      }
+    }
 
-</div>
-
-
-<script>
- async function addProduct(cart,id) {
-       
-         fetch(`api/carts/${cart}/product/${id}`, { method: "POST" })
-            .then(response => {
-                if (!response.ok) {
-                    throw new Error("Error al agregar el producto al carrito")
-                }  
-              alertaSeAgregoAlCarrito()
-            })
-            .catch(error => console.log(error));
-    } 
-
-function alertaSeAgregoAlCarrito() {
-
-
-    Toastify({
-        text: "Producto agregado",
-  duration: 3000,
-  gravity: "top", 
-  position: "right", 
-  stopOnFocus: true, 
-   offset: {
-    x: "2rem",
-    y:"5rem" 
-  },
-  style: {
-    background: "color-blue-300",
-    borderRadius:"2rem",
-  }
-    }).showToast();
-}
-  
-</script>
+  </script>
 
