--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -19,8 +19,12 @@ h1 {
 }
 
 .img {
-    width: 120px;
-    height: 120px;
+    border: 2px solid black;
+    width: 200px;
+    height: 200px;
+    object-fit:contain;
+  
+    
 }
 
 .legend {
